--- a/ar/index.html
+++ b/ar/index.html
@@ -97,7 +97,7 @@ The majority of clinically serious infections that are resistant to antibiotics 
 We also found that the resistance genes are more likely to be associated with mobile genetic elements immediately downstream from wastewater treatment facilities.</p>
 
 <h2 id="publications-and-data">Publications and Data</h2>
-<p><a href="/alldata/Thornton_2020/">Our first publication on this topic, by Christopher Thornton et al., and associated data are here.</a></p>
+<p><a href="/projects/Thornton_2020/">Our first publication on this topic, by Christopher Thornton et al., and associated data are here.</a></p>
 
 
 	</div>
