updated index.html with more projects

--- a/ar/index.html
+++ b/ar/index.html
@@ -84,7 +84,7 @@
 	<div class="float-right">
 <figure class="figure">
   <img src="/images/cows_smaller.png" class="figure-img img-fluid rounded" alt="happy cows" />
-  <figcaption class="figure-caption">Agriculture and wastewater are two of the largest factors in the proliferation of antibiotic resistance genes in the environment.</figcaption>
+  <figcaption class="figure-caption" style="width: 250px">Agriculture and wastewater are two of the largest factors in the proliferation of antibiotic resistance genes in the environment.</figcaption>
 </figure>
 </div>
 
