--- a/lostcity/index.html
+++ b/lostcity/index.html
@@ -84,7 +84,7 @@
 	<div class="float-right">
 <figure class="figure">
   <img src="/images/sulis_20180916180909_smaller2_sq.png" class="figure-img img-fluid rounded" alt="lost city chimney" />
-  <figcaption class="figure-caption">Warm hydrothermal fluids venting from a Lost City chimney. Photo credit: Chief Scientist Susan Lang / NSF / ROV Jason / Woods Hole Oceanographic Institution </figcaption>
+  <figcaption class="figure-caption" style="width: 300px">Warm hydrothermal fluids venting from a Lost City chimney. Photo credit: Chief Scientist Susan Lang / NSF / ROV Jason / Woods Hole Oceanographic Institution </figcaption>
 </figure>
 </div>
 
@@ -107,7 +107,7 @@ The expedition was <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=153
 <div class="float-right">
 <figure class="figure">
   <img src="/images/Russell_cartoon.png" class="figure-img img-fluid rounded" alt="lost city chimney" />
-  <figcaption class="figure-caption">"Transition from “geoenergetics” to “bioenergetics” in ancient Earth environments similar to the Lost City. Image from Russell and Martin (2004)Trends in Biochem Sci." </figcaption>
+  <figcaption class="figure-caption" style="width: 300px">"Transition from “geoenergetics” to “bioenergetics” in ancient Earth environments similar to the Lost City. Image from Russell and Martin (2004)Trends in Biochem Sci." </figcaption>
 </figure>
 </div>
 
