--- a/index.html
+++ b/index.html
@@ -80,10 +80,11 @@
 	<div class="container">
 
 	<div class="row">
-		<div class="col-12">
+		<div class="col-10">
 			<object class="float-right" data="/images/sulis_20180916180909_smallest.png" type="image/png"></object>
 			<div class="bigtitle logobox">
-				William J. Brazelton
+				William J. 
+				Brazelton
 			</div>
 		</div>
 	</div>
@@ -108,7 +109,7 @@
 		<div class="col-12">
 			<div class="smallhead">
 		  <p>
-			My research mostly falls within two general topics. Click on each of these to read more:
+			Current research projects:
 		  </p> 
 			</div>
 		</div>        
@@ -124,15 +125,69 @@
 		</div>	
 		<div class="col-lg-7">
 			<div class="head">
-			<a class="off" href="/lostcity/">Rock-Powered Life</a>
+			<a class="off" href="/lostcity/">Lost City Hydrothermal Field</a>
 			</div>
 			<div class="smallhead">
-			Explorations of microbes that live in subsurface rocks, with implications for the origin of life and astrobiology.
+			Studies of unusual archaea and bacteria that live within these unique hydrothermal chimneys in the deep sea.
 			</div>
 		</div>
 	</div>
 		
-	<div class="bigspacer"></div>        
+	<div class="bigspacer"></div>      
+	
+		<div class="row">
+		<div class="col-lg-auto">
+		<a class="off" href="/lostcity/">
+		<object class="float-left biglogo" data="/images/Exp357_sq.png" type="image/png"></object>
+		</a>
+		</div>	
+		<div class="col-lg-7">
+			<div class="head">
+			<a class="off" href="/atlantismassif/">Atlantis Massif</a>
+			</div>
+			<div class="smallhead">
+			Explorations of potential microbial habitats within the subseafloor rocks underlying the Lost City hydrothermal field.
+			</div>
+		</div>
+	</div>
+	
+	<div class="bigspacer"></div>      
+	
+		<div class="row">
+		<div class="col-lg-auto">
+		<a class="off" href="/lostcity/">
+		<object class="float-left biglogo" data="/images/P8253893_sq.png" type="image/png"></object>
+		</a>
+		</div>	
+		<div class="col-lg-7">
+			<div class="head">
+			<a class="off" href="/serpsprings/">Serpentinite Springs</a>
+			</div>
+			<div class="smallhead">
+			Microbial ecosystems fueled by the products of serpentinization on land.
+			</div>
+		</div>
+	</div>
+	
+	<div class="bigspacer"></div>      
+	
+		<div class="row">
+		<div class="col-lg-auto">
+		<a class="off" href="/lostcity/">
+		<object class="float-left biglogo" data="/images/BSF_background.png" type="image/png"></object>
+		</a>
+		</div>	
+		<div class="col-lg-7">
+			<div class="head">
+			<a class="off" href="/bsf/">Bonneville Salt Flats</a>
+			</div>
+			<div class="smallhead">
+			Robust microbial communities inhabiting the famous salt flats in Utah.
+			</div>
+		</div>
+	</div>	
+		
+	<div class="bigspacer"></div>  
 
 	<div class="row">
 		<div class="col-lg-auto">
