--- a/atlantismassif/index.html
+++ b/atlantismassif/index.html
@@ -81,18 +81,46 @@
 
 	<div class="container mt-4">
 
-	<p><img class="float-right" src="/images/cows_small.png" style="padding: 20px" /></p>
+	<div class="float-none">
+<figure class="figure">
+  <img src="/images/Exp357.png" class="figure-img img-fluid rounded" alt="IODP Expedition 357" />
+  <figcaption class="" text-center="figure-caption" style="width: 700px">Drilling sites for IODP Expedition 357, with photos of RRS James Cook, MeBo, and RD2. Photo credit: IODP</figcaption>
+</figure>
+</div>
 
-<h2 id="drilling-into-the-oceanic-crust">Drilling into the oceanic crust</h2>
-<p>Microbes in nature are constantly inventing new antibiotics and new antibiotic resistance mechanisms. It is a natural arms race that has been ongoing for probably billions of years and that humans have only recently joined.
-The majority of clinically serious infections that are resistant to antibiotics are due to the acquisition of resistance genes from natural microbial communities in our surrounding environments.</p>
+<h2 id="iodp-expedition-357-serpentinization-and-life">IODP Expedition 357: “Serpentinization and Life”</h2>
+<p>In October 2015, an international team of scientists and engineers embarked on a 47-day expedition aboard the RRS James Cook to investigate subseafloor life in the chain of submarine mountains in the middle of the Atlantic Ocean known as the Mid-Atlantic Ridge. This expedition targeted one mountain, in particular, named the Atlantis Massif, because it is primarily composed of one special kind of rock called “serpentinite”. Serpentinites are formed when rocks from the Earth’s mantle are uplifted and exposed to water and thereby “serpentinized”, a geochemical process that releases hydrogen gas (H2) and is thought to have played a role in the origin of life. The process of serpentinization fuels a whole ecosystem of diverse microbes in the huge chimneys of the <a href="/lostcity">Lost City hydrothermal field</a>, and it may be responsible for <a href="https://solarsystem.nasa.gov/missions/cassini/science/enceladus/">the ongoing geysers emanating from Enceladus</a>.</p>
 
-<h2 id="a-metagenomic-approach">A metagenomic approach</h2>
-<p>We applied our metagenomic tools in a survey of antibiotic resistance genes present in natural watersheds of the midwestern USA. We found that resistance genes are more abundant in river waters immediately downstream from wastewater treatment facilities, but this spike in abundance quickly fades to background levels a few kilometers downstream.
-We also found that the resistance genes are more likely to be associated with mobile genetic elements immediately downstream from wastewater treatment facilities.</p>
+<div class="float-right">
+<figure class="figure">
+  <img src="/images/core.png" class="figure-img img-fluid rounded" alt="Rock core" />
+  <figcaption class="" text-center="figure-caption" style="width: 200px">One of the rock cores we prepared for DNA sequencing. Photo credit: IODP.</figcaption>
+</figure>
+</div>
+
+<h3 id="a-major-goal-of-this-expedition-was-to-investigate-the-relationship-between-serpentinization-and-life-so-that-we-can-better-understand-the-origin-and-early-evolution-of-life-on-earth-and-to-inform-the-search-for-life-on-other-worlds-where-serpentinization-is-expected-to-occur"><strong><em>A major goal of this expedition was to investigate the relationship between serpentinization and life so that we can better understand the origin and early evolution of life on Earth and to inform the search for life on other worlds where serpentinization is expected to occur.</em></strong></h3>
+
+<p>In order to search for life inside these serpentinite rocks, we had to drill into the seafloor. Typically, ocean drilling (either for scientific research or for oil exploration) is conducted in seabed sediments, which are basically compacted mud. In some parts of the ocean, these sediments can accumulate into columns thousands of kilometers thick, which are scientifically and economically valuable for many reasons. It is very rare for ocean drilling expeditions to drill into the bedrock underneath the sediments because 1) there are currently no profitable resources to be extracted from the bedrock <a href="/deep-sea-mining/">(but that may change in the near future)</a> and 2) drilling into hard rock on the seafloor is extremely challenging from an engineering perspective.</p>
+
+<p>In order to drill into and core the bedrock serpentinites of the Atlantis Massif, IODP Expedition 357 utilized two seabed drills, adapted for drilling into hard rocks for the first time. They were the Meeresboden-Bohrgerät 70 (MeBo) rock drill from the Center for Marine Environmental Sciences (MARUM; University of Bremen, Germany) and the RockDrill2 (RD2) from the British Geological Survey (BGS). The adaptation of these drills and the many associated technical innovations represented a major engineering accomplishment of the expedition.</p>
+
+<p>You can read more about these accomplishments and other outcomes from the expedition in the <a href="http://publications.iodp.org/proceedings/357/357title.html">Expedition Report</a> and the <a href="https://www.sciencedirect.com/science/article/abs/pii/S0024493718303335">associated publication</a>, led by Chief Scientists Gretchen Früh-Green and Beth Orcutt.</p>
+
+<p>And <a href="/blog/dna-from-stone/">this blog post has more about the Brazelton Lab’s specific role in this project.</a></p>
 
 <h2 id="publications-and-data">Publications and Data</h2>
-<p><a href="/data/Thornton_2020/">Our first publication on this topic, by Christopher Thornton et al., and associated data are here.</a></p>
+<ol>
+  <li>The first publication on the microbial diversity of subseafloor serpentinites, <a href="/papers/Motamedi-Appl-Environ-Microbiol/">by Sheri Motamedi et al. (2020)</a>
+    <ul>
+      <li>Supplemental data associated with this publication <a href="https://github.com/Brazelton-Lab/Atlantis-Massif-2015">on GitHub.</a></li>
+    </ul>
+  </li>
+  <li>Our assessment of the potential for contamination from drilling operations on subseafloor rock cores, <a href="papers/Pendleton-Sci.-Dril">by Lizethe Pendleton et al. (2021)</a>
+    <ul>
+      <li>Supplemental data associated with this publication <a href="https://github.com/Brazelton-Lab/Pendleton-2021-Sci-Drill">on GitHub.</a></li>
+    </ul>
+  </li>
+</ol>
 
 
 	</div>
