--- a/serpsprings/index.html
+++ b/serpsprings/index.html
@@ -81,18 +81,49 @@
 
 	<div class="container mt-4">
 
-	<p><img class="float-right" src="/images/cows_small.png" style="padding: 20px" /></p>
+	<div class="float-right">
+<figure class="figure">
+  <img src="/images/P8253893_small.png" class="figure-img img-fluid rounded" alt="IODP Expedition 357" />
+  <figcaption class="" text-center="figure-caption" style="width: 700px">Serpentinite springs of the Voltri Massif, Italy. Photo credit: W.J. Brazelton</figcaption>
+</figure>
+</div>
 
-<h2 id="drilling-into-the-oceanic-crust">Drilling into the oceanic crust</h2>
-<p>Microbes in nature are constantly inventing new antibiotics and new antibiotic resistance mechanisms. It is a natural arms race that has been ongoing for probably billions of years and that humans have only recently joined.
-The majority of clinically serious infections that are resistant to antibiotics are due to the acquisition of resistance genes from natural microbial communities in our surrounding environments.</p>
+<h2 id="serpentinization-on-land">Serpentinization on Land</h2>
+<p>Serpentinization is the geochemical alteration of rocks that were originally formed in Earth’s mantle. When these mantle rocks are uplifted into the seafloor, hydrothermal systems, like <a href="/lostcity">the Lost City hydrothermal field</a>, can be formed. When these mantle rocks are uplifted into continental crust (typically after they had been on the seafloor for millions of years), then products of serpentinization can be seen on land.</p>
 
-<h2 id="a-metagenomic-approach">A metagenomic approach</h2>
-<p>We applied our metagenomic tools in a survey of antibiotic resistance genes present in natural watersheds of the midwestern USA. We found that resistance genes are more abundant in river waters immediately downstream from wastewater treatment facilities, but this spike in abundance quickly fades to background levels a few kilometers downstream.
-We also found that the resistance genes are more likely to be associated with mobile genetic elements immediately downstream from wastewater treatment facilities.</p>
+<p>A review on the differences between serpentinization on land and in the sea, <a href="/papers/Schrenk-Rev-in-Mineral-Geochem/">by Schrenk, Brazelton, and Lang. (2013).</a></p>
 
-<h2 id="publications-and-data">Publications and Data</h2>
-<p><a href="/data/Thornton_2020/">Our first publication on this topic, by Christopher Thornton et al., and associated data are here.</a></p>
+<p>We study serpentinization on land with two primary research strategies:</p>
+<ol>
+  <li>Drilling into the rocks where serpentinization is occurring (or occurred in the past). Two examples are <a href="https://www.colorado.edu/lab/rockpoweredlife/research/theme-i-field-investigations/coast-range-ophiolite-microbiological-observatory">the Coast Range Ophiolite Microbial Observatory (CROMO)</a> and the <a href="https://www.omandrilling.ac.uk/">Oman Drilling Project</a>.</li>
+  <li>Exploring natural springs where the products of serpentinization are transported to the surface by groundwater. Multiple examples of these are described below.</li>
+</ol>
+
+<p>Note that these are also the two basic strategies we have in the ocean: <a href="/atlantismassif/">seafloor drilling projects</a> and sampling natural seafloor springs like <a href="/lostcity/">the Lost City chimneys</a>.</p>
+
+<div class="float-right">
+<figure class="figure">
+  <img src="/images/CROMO_400.png" class="figure-img img-fluid rounded" alt="IODP Expedition 357" />
+  <figcaption class="" text-center="figure-caption" style="width: 700px">Sampling groundwater from a CROMO borehole. Photo credit: W.J. Brazelton</figcaption>
+</figure>
+</div>
+<h2 id="cromo">CROMO</h2>
+<p>The Coast Range Ophiolite Microbial Observatory (CROMO) was established in 2011 with funds provided by the NASA Astrobiology Institute. Eight new boreholes were drilled with ultra-clean methods, including the use of purified water as the only drilling lubricant. Groundwater sampled from the boreholes has an extremely high pH (&gt;12) and contains hydrogen and methane gas, signatures of serpentinization.</p>
+
+<p>Research at CROMO has been led by <a href="https://web.uri.edu/geo/dawn-cardace/">Dawn Cardace</a>, <a href="https://www.nasa.gov/content/tori-hoehler">Tori Hoehler</a>, <a href="https://www.colorado.edu/lab/rockpoweredlife/tom-mccollom">Tom McCollom</a>, and <a href="https://ees.natsci.msu.edu/people/faculty/schrenk-matt/">Matt Schrenk</a> as the Principle Investigators and has involved many students and postdoctoral researchers.</p>
+
+<p>The Brazelton and Schrenk labs have collaborated on the microbiological and metagenomic studies at CROMO:</p>
+<ol>
+  <li>The first publication on the microbial diversity of CROMO groundwater, <a href="/papers/Twing-Front.-Microbiol">by Katrina Twing et al. (2017).</a></li>
+  <li>Gene expression and metabolic activity in CROMO groundwater, <a href="/papers/Crespo-Medina-Front.-Microbiol">by Melitza Crespo Medina et al., (2017).</a></li>
+  <li>Metabolic pathways for carbon assimilation in CROMO groundwater, <a href="/papers/Seyler-mSystems/">by Lauren Seyler et al., (2020).</a></li>
+  <li>The sulfur cycle in CROMO groundwater, <a href="/papers/Sabuda-Environ-Microbiol/">by Mary Sabuda et al., (2020).</a></li>
+  <li>Flux and consumption of methane through the CROMO boreholes, <a href="/papers/Sabuda-J-Geophys-Res-Biogeosci/">by Mary Sabuda et al., (2021).</a></li>
+  <li>Dispersal and selection of microbial communities in CROMO groundwater, <a href="/papers/Putman-mSystems/">by Lindsay Putman et al., (2021).</a></li>
+</ol>
+
+<h2 id="the-tablelands">The Tablelands</h2>
+
 
 
 	</div>
