updated BSF and Lost City pages

--- a/about/index.html
+++ b/about/index.html
@@ -85,13 +85,16 @@
 
 <h2 id="about">About</h2>
 <p>I am an Associate Professor in the School of Biological Sciences at the University of Utah in Salt Lake City, Utah, USA. 
-<a href="https://www.biology.utah.edu/faculty/william-brazelton/">Here is my faculty profile page.</a></p>
+<a href="https://faculty.utah.edu/u0885949-WILLIAM_BRAZELTON/hm/index.hml">Here is my faculty profile page.</a></p>
 
 <h2 id="website-overview">Website Overview</h2>
 <ul>
-  <li><a href="/lostcity">An overview of my research on rock-powered life is here.</a></li>
+  <li><a href="/lostcity">An overview of my research on the Lost City hydrothermal field is here.</a></li>
+  <li><a href="/atlantismassif">An overview of my research on the Atlantis Massif is here.</a></li>
+  <li><a href="/sersprings">An overview of my research on serpentinite springs is here.</a></li>
+  <li><a href="/bsf">An overview of my research on the Bonneville Salt Flats is here.</a></li>
   <li><a href="/ar">An overview of my research on antibiotic resistance is here.</a></li>
-  <li><a href="/projects">All data and code are open-source and publicly available as github repositories summarized here.</a></li>
+  <li><a href="/projects">All data and code are open-source and publicly available as GitHub repositories summarized here.</a></li>
   <li><a href="/papers">My publications are listed here.</a></li>
 </ul>
 
