--- a/serpsprings/index.html
+++ b/serpsprings/index.html
@@ -96,7 +96,7 @@
 <p>We study serpentinization on land with two primary research strategies:</p>
 <ol>
   <li>Drilling into the rocks where serpentinization is occurring (or occurred in the past). Two examples are <a href="https://www.colorado.edu/lab/rockpoweredlife/research/theme-i-field-investigations/coast-range-ophiolite-microbiological-observatory">the Coast Range Ophiolite Microbial Observatory (CROMO)</a> and the <a href="https://www.omandrilling.ac.uk/">Oman Drilling Project</a>.</li>
-  <li>Exploring natural springs where the products of serpentinization are transported to the surface by groundwater. Multiple examples of these are described below.</li>
+  <li>Exploring natural springs where the products of serpentinization are transported to the surface by groundwater. Two examples are the Tablelands and the Voltri Massif (see below).</li>
 </ol>
 
 <p>Note that these are also the two basic strategies we have in the ocean: <a href="/atlantismassif/">seafloor drilling projects</a> and sampling natural seafloor springs like <a href="/lostcity/">the Lost City chimneys</a>.</p>
@@ -104,7 +104,7 @@
 <div class="float-right">
 <figure class="figure">
   <img src="/images/CROMO_400.png" class="figure-img img-fluid rounded" alt="IODP Expedition 357" />
-  <figcaption class="" text-center="figure-caption" style="width: 700px">Sampling groundwater from a CROMO borehole. Photo credit: W.J. Brazelton</figcaption>
+  <figcaption class="" text-center="figure-caption" style="width: 400px">Sampling groundwater from a CROMO borehole. Photo credit: W.J. Brazelton</figcaption>
 </figure>
 </div>
 <h2 id="cromo">CROMO</h2>
@@ -123,6 +123,8 @@
 </ol>
 
 <h2 id="the-tablelands">The Tablelands</h2>
+
+<h2 id="voltri-massif">Voltri Massif</h2>
 
 
 
