--- a/lostcity/index.html
+++ b/lostcity/index.html
@@ -81,10 +81,10 @@
 
 	<div class="container mt-4">
 
-	<div class="float-right">
+	<div class="float-none">
 <figure class="figure">
-  <img src="/images/sulis_20180916180909_smaller2_sq.png" class="figure-img img-fluid rounded" alt="lost city chimney" />
-  <figcaption class="figure-caption" style="width: 300px">Warm hydrothermal fluids venting from a Lost City chimney. Photo credit: Chief Scientist Susan Lang / NSF / ROV Jason / Woods Hole Oceanographic Institution </figcaption>
+  <img src="/images/sulis_20180916180909_smaller.png" class="figure-img img-fluid rounded" alt="lost city chimney" />
+  <figcaption class="figure-caption" style="width: 900px">Warm hydrothermal fluids venting from a Lost City chimney. Photo credit: Chief Scientist Susan Lang / NSF / ROV Jason / Woods Hole Oceanographic Institution </figcaption>
 </figure>
 </div>
 
