--- a/about/index.html
+++ b/about/index.html
@@ -91,7 +91,7 @@
 <ul>
   <li><a href="/lostcity">An overview of my research on the Lost City hydrothermal field is here.</a></li>
   <li><a href="/atlantismassif">An overview of my research on the Atlantis Massif is here.</a></li>
-  <li><a href="/sersprings">An overview of my research on serpentinite springs is here.</a></li>
+  <li><a href="/serpsprings">An overview of my research on serpentinite springs is here.</a></li>
   <li><a href="/bsf">An overview of my research on the Bonneville Salt Flats is here.</a></li>
   <li><a href="/ar">An overview of my research on antibiotic resistance is here.</a></li>
   <li><a href="/projects">All data and code are open-source and publicly available as GitHub repositories summarized here.</a></li>
