--- a/bsf/index.html
+++ b/bsf/index.html
@@ -81,7 +81,7 @@
 
 	<div class="container mt-4">
 
-	<div class="rounded mx-auto d-block">
+	<div class="float-none">
 <figure class="figure">
   <img src="/images/BSF_sample_800.png" class="figure-img img-fluid rounded" alt="IODP Expedition 357" />
   <figcaption class="" text-center="figure-caption" style="width: 1000px">Surface salt crust of the Bonneville Salt Flats. Faint pink colors are from halophilic, photosynthetic archaea. Photo credit: Emily Dart</figcaption>
