playing with figure captions

--- a/bsf/index.html
+++ b/bsf/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- RSS feed -->
-	<link rel="alternate" type="application/rss+xml" title="" href="http://localhost:4000/feed.xml">
+	<link rel="alternate" type="application/rss+xml" title="" href="http://0.0.0.0:4000/feed.xml">
 
   <!-- Customized Bootstrap + Font Awesome + Solarized -->
   <link href="/css/style.css" rel="stylesheet" media="screen">
@@ -83,8 +83,8 @@
 
 	<div class="float-none">
 <figure class="figure">
-  <img src="/images/BSF_sample_800.png" class="figure-img img-fluid rounded" alt="IODP Expedition 357" />
-  <figcaption class="" text-center="figure-caption" style="width: 1000px">Surface salt crust of the Bonneville Salt Flats. Faint pink colors are from halophilic, photosynthetic archaea. Photo credit: Emily Dart</figcaption>
+  <img src="/images/BSF_sample_600.png" class="figure-img img-fluid rounded" alt="BSF" />
+  <figcaption class="figure-caption" style="width: 600px">Surface salt crust of the Bonneville Salt Flats. Faint pink colors are from halophilic, photosynthetic archaea. Photo credit: Emily Dart</figcaption>
 </figure>
 </div>
 
@@ -92,8 +92,8 @@
 
 <div class="float-right">
 <figure class="figure">
-  <img src="/images/BSF_sampling_441.png" class="figure-img img-fluid rounded" alt="IODP Expedition 357" />
-  <figcaption class="" text-center="figure-caption" style="width: 440px">Collecting samples for microbiology research. Photo credit: Emily Dart</figcaption>
+  <img src="/images/BSF_sampling_441.png" class="figure-img img-fluid rounded" alt="BSF" />
+  <figcaption class="figure-caption" style="width: 440px">Collecting samples for microbiology research. Photo credit: Emily Dart</figcaption>
 </figure>
 </div>
 
@@ -107,16 +107,16 @@ Similarly, the Bonneville Salt Flats are the remnants of Lake Bonneville, the la
 <p>Recent research at the Bonneville Salt Flats has been led by <a href="https://environment.utah.edu/brenda-bowen/">Brenda Bowen</a>.
 This research has been highly interdisciplinary, including geology, microbiology, and sociology.</p>
 
-<div class="float-right">
-<figure class="figure">
-  <img src="/images/BSF_core_441.png" class="figure-img img-fluid rounded" alt="IODP Expedition 357" />
-  <figcaption class="" text-center="figure-caption" style="width: 440px">Core of the salt crust, revealing multiple colored layers produced by microbial communities. Photo credit: Emily Dart</figcaption>
-</figure>
-</div>
-
 <p>A scientist-artist collaboration by Brenda Bowen and Wendy Wischer produced this <a href="https://www.granaryarts.org/wendy-wischer-brenda-bowen-evaporated-explorations-in-art-science-and-salt">art exhibition about the Bonneville Salt Flats.</a></p>
 
 <p>You can follow science-oriented <a href="https://twitter.com/bsfscience">updates about the Bonneville Salt Flats on Twitter.</a></p>
+
+<div class="float-right">
+<figure class="figure">
+  <img src="/images/BSF_core_441.png" class="figure-img img-fluid rounded" alt="BSF" />
+  <figcaption class="figure-caption" style="width: 440px">Core of the salt crust, revealing multiple colored layers produced by microbial communities. Photo credit: Emily Dart</figcaption>
+</figure>
+</div>
 
 <h2 id="publications-and-data">Publications and data</h2>
 <p>The Brazelton lab has led the microbiological studies of the Bonneville Salt Flats, which have produced the following publications so far:</p>
