--- a/atlantismassif/index.html
+++ b/atlantismassif/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- RSS feed -->
-	<link rel="alternate" type="application/rss+xml" title="" href="http://localhost:4000/feed.xml">
+	<link rel="alternate" type="application/rss+xml" title="" href="http://0.0.0.0:4000/feed.xml">
 
   <!-- Customized Bootstrap + Font Awesome + Solarized -->
   <link href="/css/style.css" rel="stylesheet" media="screen">
@@ -84,7 +84,7 @@
 	<div class="float-none">
 <figure class="figure">
   <img src="/images/Exp357.png" class="figure-img img-fluid rounded" alt="IODP Expedition 357" />
-  <figcaption class="" text-center="figure-caption" style="width: 700px">Drilling sites for IODP Expedition 357, with photos of RRS James Cook, MeBo, and RD2. Photo credit: IODP</figcaption>
+  <figcaption class="figure-caption" style="width: 700px">Drilling sites for IODP Expedition 357, with photos of RRS James Cook, MeBo, and RD2. Photo credit: IODP</figcaption>
 </figure>
 </div>
 
@@ -96,7 +96,7 @@
 <div class="float-right">
 <figure class="figure">
   <img src="/images/core.png" class="figure-img img-fluid rounded" alt="Rock core" />
-  <figcaption class="" text-center="figure-caption" style="width: 200px">One of the rock cores we prepared for DNA sequencing. Photo credit: IODP.</figcaption>
+  <figcaption class="figure-caption" style="width: 200px">One of the rock cores we prepared for DNA sequencing. Photo credit: IODP.</figcaption>
 </figure>
 </div>
 
