--- a/serpsprings/index.html
+++ b/serpsprings/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- RSS feed -->
-	<link rel="alternate" type="application/rss+xml" title="" href="http://localhost:4000/feed.xml">
+	<link rel="alternate" type="application/rss+xml" title="" href="http://0.0.0.0:4000/feed.xml">
 
   <!-- Customized Bootstrap + Font Awesome + Solarized -->
   <link href="/css/style.css" rel="stylesheet" media="screen">
@@ -81,10 +81,10 @@
 
 	<div class="container mt-4">
 
-	<div class="float-right">
+	<div class="float-none">
 <figure class="figure">
-  <img src="/images/P8253893_small.png" class="figure-img img-fluid rounded" alt="IODP Expedition 357" />
-  <figcaption class="" text-center="figure-caption" style="width: 700px">Serpentinite springs of the Voltri Massif, Italy. Photo credit: W.J. Brazelton</figcaption>
+  <img src="/images/P8253893_800.png" class="figure-img img-fluid rounded" alt="Voltri Massif" />
+  <figcaption class="figure-caption" style="width: 800px">Serpentinite springs of the Voltri Massif, Italy. Photo credit: W.J. Brazelton</figcaption>
 </figure>
 </div>
 
@@ -101,13 +101,15 @@
 
 <p>Note that these are also the two basic strategies we have in the ocean: <a href="/atlantismassif/">seafloor drilling projects</a> and sampling natural seafloor springs like <a href="/lostcity/">the Lost City chimneys</a>.</p>
 
+<h2 id="cromo">CROMO</h2>
+
 <div class="float-right">
 <figure class="figure">
-  <img src="/images/CROMO_400.png" class="figure-img img-fluid rounded" alt="IODP Expedition 357" />
-  <figcaption class="" text-center="figure-caption" style="width: 400px">Sampling groundwater from a CROMO borehole. Photo credit: W.J. Brazelton</figcaption>
+  <img src="/images/CROMO_400.png" class="figure-img img-fluid rounded" alt="CROMO" />
+  <figcaption class="figure-caption" style="width: 400px">Sampling groundwater from a CROMO borehole. Photo credit: W.J. Brazelton</figcaption>
 </figure>
 </div>
-<h2 id="cromo">CROMO</h2>
+
 <p>The Coast Range Ophiolite Microbial Observatory (CROMO) was established in 2011 with funds provided by the NASA Astrobiology Institute. Eight new boreholes were drilled with ultra-clean methods, including the use of purified water as the only drilling lubricant. Groundwater sampled from the boreholes has an extremely high pH (&gt;12) and contains hydrogen and methane gas, signatures of serpentinization.</p>
 
 <p>Research at CROMO has been led by <a href="https://web.uri.edu/geo/dawn-cardace/">Dawn Cardace</a>, <a href="https://www.nasa.gov/content/tori-hoehler">Tori Hoehler</a>, <a href="https://www.colorado.edu/lab/rockpoweredlife/tom-mccollom">Tom McCollom</a>, and <a href="https://ees.natsci.msu.edu/people/faculty/schrenk-matt/">Matt Schrenk</a> as the Principle Investigators and has involved many students and postdoctoral researchers.</p>
