fixing figure float for mobile devices

--- a/ar/index.html
+++ b/ar/index.html
@@ -81,10 +81,10 @@
 
 	<div class="container mt-4">
 
-	<div class="float-right">
+	<div class="float-none">
 <figure class="figure">
-  <img src="/images/cows_smaller.png" class="figure-img img-fluid rounded" alt="happy cows" />
-  <figcaption class="figure-caption" style="width: 250px">Agriculture and wastewater are two of the largest factors in the proliferation of antibiotic resistance genes in the environment.</figcaption>
+  <img src="/images/cows_small.png" class="figure-img img-fluid rounded" alt="happy cows" />
+  <figcaption class="figure-caption" style="width: 400px">Agriculture and wastewater are two of the largest factors in the proliferation of antibiotic resistance genes in the environment.</figcaption>
 </figure>
 </div>
 
@@ -97,7 +97,10 @@ The majority of clinically serious infections that are resistant to antibiotics 
 We also found that the resistance genes are more likely to be associated with mobile genetic elements immediately downstream from wastewater treatment facilities.</p>
 
 <h2 id="publications-and-data">Publications and Data</h2>
-<p><a href="/projects/Thornton_2020/">Our first publication on this topic, by Christopher Thornton et al., and associated data are here.</a></p>
+<p>Our first publication on this topic, <a href="/papers/Thornton-GigaScience/">by Christopher Thornton et al. (2020).</a></p>
+<ul>
+  <li>Supplemental data associated with this publication <a href="/projects/Thornton_2020/">on GitHub.</a></li>
+</ul>
 
 
 	</div>
