--- a/atlantismassif/index.html
+++ b/atlantismassif/index.html
@@ -93,7 +93,7 @@
 
 <h3 id="a-major-goal-of-this-expedition-was-to-investigate-the-relationship-between-serpentinization-and-life-so-that-we-can-better-understand-the-origin-and-early-evolution-of-life-on-earth-and-to-inform-the-search-for-life-on-other-worlds-where-serpentinization-is-expected-to-occur"><strong><em>A major goal of this expedition was to investigate the relationship between serpentinization and life so that we can better understand the origin and early evolution of life on Earth and to inform the search for life on other worlds where serpentinization is expected to occur.</em></strong></h3>
 
-<div class="float-right">
+<div class="float-md-right">
 <figure class="figure">
   <img src="/images/core.png" class="figure-img img-fluid rounded" alt="Rock core" />
   <figcaption class="figure-caption" style="width: 200px">One of the rock cores we prepared for DNA sequencing. Photo credit: IODP.</figcaption>
