--- a/bsf/index.html
+++ b/bsf/index.html
@@ -90,7 +90,7 @@
 
 <h2 id="bonneville-salt-flats">Bonneville Salt Flats</h2>
 
-<div class="float-right">
+<div class="float-lg-right">
 <figure class="figure">
   <img src="/images/BSF_sampling_441.png" class="figure-img img-fluid rounded" alt="BSF" />
   <figcaption class="figure-caption" style="width: 440px">Collecting samples for microbiology research. Photo credit: Emily Dart</figcaption>
@@ -111,7 +111,7 @@ This research has been highly interdisciplinary, including geology, microbiology
 
 <p>You can follow science-oriented <a href="https://twitter.com/bsfscience">updates about the Bonneville Salt Flats on Twitter.</a></p>
 
-<div class="float-right">
+<div class="float-lg-right">
 <figure class="figure">
   <img src="/images/BSF_core_441.png" class="figure-img img-fluid rounded" alt="BSF" />
   <figcaption class="figure-caption" style="width: 440px">Core of the salt crust, revealing multiple colored layers produced by microbial communities. Photo credit: Emily Dart</figcaption>
