--- a/lostcity/index.html
+++ b/lostcity/index.html
@@ -104,7 +104,7 @@ The expedition was <a href="https://www.nsf.gov/awardsearch/showAward?AWD_ID=153
 
 <h2 id="what-is-serpentinization">What is Serpentinization?</h2>
 <p>Serpentinization is the closest thing to a free lunch that the universe provides. The word ‘serpentinization’ refers to a complex suite of poorly understood geochemical reactions that occur when rocks from the Earth’s mantle are uplifted to the surface. The mantle rocks are oxidized and hydrated by the wet, oxidized conditions at the surface, resulting in the production of water with high pH and high concentrations of hydrogen gas. These reactions occur exothermically, and the elevated levels of hydrogen gas lead to the abiotic synthesis of simple organic compounds. In other words, the consequence of making a rock wet results in the production of hydrogen gas (which is a great fuel for microbial activity) and organic compounds (which everybody likes to eat). The types of rocks involved in the process are possibly even more prevalent beyond Earth, so there is potential for serpentinization activity almost anywhere in the universe where rocks encounter liquid water.</p>
-<div class="float-right">
+<div class="float-md-right">
 <figure class="figure">
   <img src="/images/Russell_cartoon.png" class="figure-img img-fluid rounded" alt="lost city chimney" />
   <figcaption class="figure-caption" style="width: 300px">"Transition from “geoenergetics” to “bioenergetics” in ancient Earth environments similar to the Lost City. Image from Russell and Martin (2004)Trends in Biochem Sci." </figcaption>
