--- a/serpsprings/index.html
+++ b/serpsprings/index.html
@@ -103,7 +103,7 @@
 
 <h2 id="cromo">CROMO</h2>
 
-<div class="float-right">
+<div class="float-lg-right">
 <figure class="figure">
   <img src="/images/CROMO_400.png" class="figure-img img-fluid rounded" alt="CROMO" />
   <figcaption class="figure-caption" style="width: 400px">Sampling groundwater from a CROMO borehole. Photo credit: W.J. Brazelton</figcaption>
