--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
 	<div class="row">
 		<div class="col-lg-auto">
 		<a class="off" href="/ar/">
-		<object class="float-left biglogo" data="/images/cows.png" type="image/png"></object>
+		<object class="float-left biglogo" data="/images/cows_smaller.png" type="image/png"></object>
 		</a>
 		</div>	
 		<div class="col-lg-7">
