updated Voltri Massif

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 	<div class="row">
 		<div class="col-10">
-			<object class="float-right" data="/images/sulis_20180916180909_smallest.png" type="image/png"></object>
+			<object class="float-lg-right" data="/images/sulis_20180916180909_smallest.png" type="image/png"></object>
 			<div class="bigtitle logobox">
 				William J. 
 				Brazelton
