--- a/serpsprings/index.html
+++ b/serpsprings/index.html
@@ -126,7 +126,62 @@
 
 <h2 id="the-tablelands">The Tablelands</h2>
 
+<div class="float-lg-right">
+<figure class="figure">
+  <img src="/images/DSC_0007_400.png" class="figure-img img-fluid rounded" alt="CROMO" />
+  <figcaption class="figure-caption" style="width: 400px">A serpentinite spring at the Tablelands. Photo credit: Penny Morrill.</figcaption>
+</figure>
+</div>
+
+<p>Natural serpentinite springs can be seen at the Tablelands Ophiolite in Gros Morne National Park, Newfoundland, Canada. Ultramafic rocks of the Tablelands Ophiolite (also known as the Bay of Islands Ophiolite) were uplifted from the Iapetus Ocean and obducted onto the continental margin of Laurentia approximately 485 million years ago.
+Serpentinization remains evident today in the form of highly reducing, ultrabasic springs with extremely high pH (&gt;12.5).</p>
+
+<p>Research at the Tablelands has been led by <a href="https://www.esd.mun.ca/wordpress/deltasresearch/">Penny Morrill at the Memorial University of Newfoundland.</a></p>
+
+<p>The Brazelton lab was involved in the early explorations of microbial diversity at the Tablelands:</p>
+<ol>
+  <li>The first metagenomic study of serpentinite springs, featuring the Tablelands, <a href="/papers/Brazelton-Front.-Microbio">by Brazelton et al. (2012)</a></li>
+  <li>The first survey of microbial diversity in Tablelands springs, <a href="/papers/Brazelton-Appl.-Environ.-Microbiol">by Brazelton et al. (2013).</a></li>
+  <li>The first geochemical analysis of Tablelands springs, <a href="/papers/Szponar-Icarus/">by Natalie Szponar et al. (2013).</a></li>
+  <li>The first metabolic activity experiments at the Tablelands, <a href="/papers/Morrill-Front.-Microbiol">by Morrill et al. (2014).</a></li>
+</ol>
+
+<p>Penny Morrill’s team has continued to publish excellent work from the Tablelands:</p>
+<ol>
+  <li>Kohl, L., Cumming, E., Cox, A., Rietze, A., Morrissey, L., Lang, S. Q., … &amp; Morrill, P. L. (2016). Exploring the metabolic potential of microbial communities in ultra‐basic, reducing springs at The Cedars, CA, USA: experimental evidence of microbial methanogenesis and heterotrophic acetogenesis. Journal of Geophysical Research: Biogeosciences, 121(4), 1203-1220. <a href="https://agupubs.onlinelibrary.wiley.com/doi/full/10.1002/2015JG003233">HTML</a></li>
+  <li>Morrissey, L. S., &amp; Morrill, P. L. (2017). Flux of methane release and carbon dioxide sequestration at Winterhouse Canyon, Gros Morne, Newfoundland, Canada: a site of continental serpentinization. Canadian Journal of Earth Sciences, 54(3), 257-262. <a href="https://cdnsciencepub.com/doi/abs/10.1139/cjes-2016-0123">HTML</a></li>
+  <li>Cumming, E. A., Rietze, A., Morrissey, L. S., Cook, M. C., Rhim, J. H., Ono, S., &amp; Morrill, P. L. (2019). Potential sources of dissolved methane at the Tablelands, Gros Morne National Park, NL, CAN: A terrestrial site of serpentinization. Chemical Geology, 514, 42-53. <a href="https://www.sciencedirect.com/science/article/pii/S0009254119301299">HTML</a></li>
+  <li>Cook, M. C., Blank, J. G., Suzuki, S., Nealson, K. H., &amp; Morrill, P. L. (2021) Assessing Geochemical Bioenergetics and Microbial Metabolisms at Three Terrestrial Sites of Serpentinization: the Tablelands (NL, CAN), The Cedars (CA, USA), and Aqua de Ney (CA, USA). Journal of Geophysical Research: Biogeosciences, e2019JG005542. <a href="https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2019JG005542">HTML</a></li>
+  <li>Cook, M. C., Blank, J. G., Rietze, A., Suzuki, S., Nealson, K. H., &amp; Morrill, P. L. (2021) A Geochemical Comparison of Three Terrestrial Sites of Serpentinization: The Tablelands, The Cedars, and Aqua de Ney. Journal of Geophysical Research: Biogeosciences, e2021JG006316.<a href="https://agupubs.onlinelibrary.wiley.com/doi/abs/10.1029/2021JG006316">HTML</a></li>
+</ol>
+
 <h2 id="voltri-massif">Voltri Massif</h2>
+
+<div class="float-lg-right">
+<figure class="figure">
+  <img src="/images/Voltri_400.png" class="figure-img img-fluid rounded" alt="CROMO" />
+  <figcaption class="figure-caption" style="width: 400px">A serpentinite spring at the Voltri Massif. Photo credit: W.J. Brazelton.</figcaption>
+</figure>
+</div>
+
+<p>The Voltri Massif in northern Italy is a geological formation that was originally on the ocean floor 200 - 250 million years ago.
+It hosts natural springs (pH 11–12) that have an important role in the local Italian culture, where the extremely alkaline spring water is used for bathing and drinking.
+The springs were surveyed and catalogued by Italian scientists, including <a href="https://www.sciencedirect.com/science/article/pii/S0883292703002105">a key early study by Cipolli et al. (2003).</a></p>
+
+<p>Gretchen Früh-Green of ETH-Zurich has led recent studies of the Voltri Massif springs, including the Ph.D. dissertation of Esther Schwarzenbach:</p>
+<ol>
+  <li>Schwarzenbach, E. M., Früh-Green, G. L., Bernasconi, S. M., Alt, J. C., Shanks III, W. C., Gaggero, L., &amp; Crispini, L. (2012). Sulfur geochemistry of peridotite-hosted hydrothermal systems: comparing the Ligurian ophiolites with oceanic serpentinites. Geochimica et Cosmochimica Acta, 91, 283-305. <a href="https://www.sciencedirect.com/science/article/abs/pii/S0016703712003080">HTML</a></li>
+  <li>Schwarzenbach, E. M., Früh-Green, G. L., Bernasconi, S. M., Alt, J. C., &amp; Plas, A. (2013). Serpentinization and carbon sequestration: A study of two ancient peridotite-hosted hydrothermal systems. Chemical Geology, 351, 115-133. <a href="https://www.sciencedirect.com/science/article/abs/pii/S0009254113002222">HTML</a></li>
+  <li>Schwarzenbach, E. M., Lang, S. Q., Früh-Green, G. L., Lilley, M. D., Bernasconi, S. M., &amp; Mehay, S. (2013). Sources and cycling of carbon in continental, serpentinite-hosted alkaline springs in the Voltri Massif, Italy. Lithos, 177, 226-244. <a href="https://www.sciencedirect.com/science/article/abs/pii/S0024493713002223">HTML</a></li>
+  <li>Alt, J. C., Schwarzenbach, E. M., Früh-Green, G. L., Shanks III, W. C., Bernasconi, S. M., Garrido, C. J., … &amp; Marchesi, C. (2013). The role of serpentinites in cycling of carbon and sulfur: seafloor serpentinization and subduction metamorphism. Lithos, 178, 40-54. <a href="https://www.sciencedirect.com/science/article/abs/pii/S0024493712004975">HTML</a></li>
+</ol>
+
+<p>The Brazelton lab conducted the first survey of microbial diversity in the Voltri Massif springs, including metagenomic and laboratory investigations of metabolic activity.
+We showed that the pH 12 springs of the Voltri Massif are transporting distinct archaeal and bacterial communities, including methanogenic archaea and methanotrophic bacteria, from subsurface habitats where they are likely to be supported by hydrogen gas, methane, and possibly other products of serpentinization-associated reactions.</p>
+
+<p>Publication: <a href="/papers/Brazelton-PeerJ/">Brazelton et al. (2017) PeerJ</a></p>
+
+<p>Associated Data: <a href="https://github.com/Brazelton-Lab/Brazelton-2017-PeerJ">GitHub Repo</a></p>
 
 
 
