updated Tablelands and played with image formats

--- a/serpsprings/index.html
+++ b/serpsprings/index.html
@@ -138,13 +138,17 @@ Serpentinization remains evident today in the form of highly reducing, ultrabasi
 
 <p>Research at the Tablelands has been led by <a href="https://www.esd.mun.ca/wordpress/deltasresearch/">Penny Morrill at the Memorial University of Newfoundland.</a></p>
 
-<p>The Brazelton lab was involved in the early explorations of microbial diversity at the Tablelands:</p>
+<p>As a NASA Astrobiology postdoctoral fellow working with <a href="https://ees.natsci.msu.edu/people/faculty/schrenk-matt/">Matt Schrenk</a>, I was involved in the early explorations of microbial diversity at the Tablelands:</p>
 <ol>
   <li>The first metagenomic study of serpentinite springs, featuring the Tablelands, <a href="/papers/Brazelton-Front.-Microbio">by Brazelton et al. (2012)</a></li>
   <li>The first survey of microbial diversity in Tablelands springs, <a href="/papers/Brazelton-Appl.-Environ.-Microbiol">by Brazelton et al. (2013).</a></li>
   <li>The first geochemical analysis of Tablelands springs, <a href="/papers/Szponar-Icarus/">by Natalie Szponar et al. (2013).</a></li>
   <li>The first metabolic activity experiments at the Tablelands, <a href="/papers/Morrill-Front.-Microbiol">by Morrill et al. (2014).</a></li>
 </ol>
+
+<p>After starting my lab at the University of Utah, Emily Dart and I conducted an experiment at the Tablelands with Penny Morrill to identify potential subsurface microbes. This was Emily’s undergraduate honors thesis, which is available as a preprint:</p>
+
+<p><a href="https://www.biorxiv.org/content/10.1101/2021.09.15.460147v1">Dart et al. (bioRxiv preprint)</a></p>
 
 <p>Penny Morrill’s team has continued to publish excellent work from the Tablelands:</p>
 <ol>
