--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
 	<div class="row">
 		<div class="col-10">
-			<object class="float-lg-right" data="/images/sulis_20180916180909_smallest.png" type="image/png"></object>
+			<object class="float-none" data="/images/sulis_20180916180909_900_adj.png" type="image/png"></object>
 			<div class="bigtitle logobox">
 				William J. 
 				Brazelton
@@ -89,10 +89,8 @@
 		</div>
 	</div>
 
-	<div class="bigspacer"></div>
-
 	<div class="row">
-		<div class="col-12">
+		<div class="col-10">
 			<div class="smallhead">
 		  <p>
 			I am a scientist who studies natural microbial communities, specializing in metagenomic approaches. 
