updated home page and about page

--- a/about/index.html
+++ b/about/index.html
@@ -7,7 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 	<!-- RSS feed -->
-	<link rel="alternate" type="application/rss+xml" title="" href="http://0.0.0.0:4000/feed.xml">
+	<link rel="alternate" type="application/rss+xml" title="" href="http://localhost:4000/feed.xml">
 
   <!-- Customized Bootstrap + Font Awesome + Solarized -->
   <link href="/css/style.css" rel="stylesheet" media="screen">
@@ -86,6 +86,32 @@
 <h2 id="about">About</h2>
 <p>I am an Associate Professor in the School of Biological Sciences at the University of Utah in Salt Lake City, Utah, USA. 
 <a href="https://faculty.utah.edu/u0885949-WILLIAM_BRAZELTON/hm/index.hml">Here is my faculty profile page.</a></p>
+
+<p><strong>The Brazelton Lab currently features:</strong></p>
+<ul>
+  <li><a href="https://www.bigelow.org/about/people/jmcgonigle.html">Julia McGonigle</a>, NASA Astrobiology postdoctoral fellow</li>
+  <li><a href="https://www.linkedin.com/in/cecilia-prator/">Ceclia Prator</a>, NSF postdoctoral fellow</li>
+  <li>Alli Hoffman, undergraduate researcher</li>
+  <li>Briggs Miller, undergraduate researcher</li>
+  <li>Jake Lowe, undergraduate researcher</li>
+</ul>
+
+<p><strong>Brazelton Lab alumni include:</strong></p>
+<ul>
+  <li><a href="https://www.linkedin.com/in/madisonblock">Madison Block</a></li>
+  <li><a href="https://www.linkedin.com/in/cody-dangerfield-850860a1">Cody Dangerfield</a></li>
+  <li><a href="https://nahlgren.wordpress.com/students/">Emily Dart</a></li>
+  <li><a href="https://www.linkedin.com/in/sarahhludzinski">Sarah Hludzinski</a></li>
+  <li><a href="https://www.linkedin.com/in/alex-hyer">Alex Hyer</a></li>
+  <li><a href="https://twitter.com/microbio_babe">LeAundra Schopflin</a></li>
+  <li><a href="https://www.linkedin.com/in/shahrzad-motamedi/">Sheri Motamedi</a></li>
+  <li>Lizethe Pendleton</li>
+  <li><a href="https://www.researchgate.net/profile/Mac-Pierce">Mac Pierce</a></li>
+  <li>Abbey Rees</li>
+  <li><a href="https://www.researchgate.net/profile/Christopher-Thornton-4">Christopher Thornton</a></li>
+  <li><a href="https://twinglab.wixsite.com/website">Katrina Twing</a></li>
+  <li><a href="https://www.linkedin.com/in/mikayla-wheeler/">Mikayla Wheeler</a></li>
+</ul>
 
 <h2 id="website-overview">Website Overview</h2>
 <ul>
