updated about, project pages, and pubs

--- a/about/index.html
+++ b/about/index.html
@@ -75,52 +75,68 @@
 
 	<div class="container mt-4">
 
-	<p><img class="pull-right" src="/images/me2_cropped_small.png" style="padding: 20px" /></p>
+	<p><img class="pull-right" src="/images/me_2022_300p.png" style="padding: 20px" /></p>
 
 <h2 id="about">About</h2>
-<p>I am an Associate Professor in the School of Biological Sciences at the University of Utah in Salt Lake City, Utah, USA. 
-<a href="https://faculty.utah.edu/u0885949-WILLIAM_BRAZELTON/hm/index.hml">Here is my faculty profile page.</a></p>
+<p>William J. Brazelton</p>
 
-<p><strong>The Brazelton Lab currently features:</strong></p>
+<p>Research Associate Professor, <a href="https://www.biology.utah.edu/faculty/william-brazelton/">School of Biological Sciences, University of Utah</a></p>
+
+<p>Research Scientist, <a href="https://bmsis.org/">Blue Marble Space Institute of Science</a></p>
+
+<h2 id="brazelton-lab-alumni">Brazelton Lab Alumni</h2>
+<p><strong>Postdoctoral Researchers</strong></p>
 <ul>
-  <li><a href="https://www.bigelow.org/about/people/jmcgonigle.html">Julia McGonigle</a>, NASA Astrobiology postdoctoral fellow</li>
-  <li><a href="https://www.linkedin.com/in/cecilia-prator/">Ceclia Prator</a>, NSF postdoctoral fellow</li>
-  <li>Alli Hoffman, undergraduate researcher</li>
-  <li>Briggs Miller, undergraduate researcher</li>
-  <li>Jake Lowe, undergraduate researcher</li>
+  <li><a href="https://www.linkedin.com/in/cecilia-prator/">Cecilia Prator</a></li>
+  <li><a href="https://twinglab.wixsite.com/website">Katrina Twing</a></li>
 </ul>
 
-<p><strong>Brazelton Lab alumni include:</strong></p>
+<p><strong>Graduate Students</strong></p>
+<ul>
+  <li><a href="https://www.linkedin.com/in/robin-mcardel-a7a93261/">Robin McArdel</a></li>
+  <li><a href="https://www.linkedin.com/in/julia-mcgonigle/">Julia McGonigle</a></li>
+  <li><a href="https://www.linkedin.com/in/shahrzad-motamedi/">Sheri Motamedi</a></li>
+  <li><a href="https://www.researchgate.net/profile/Christopher-Thornton-4">Christopher Thornton</a></li>
+</ul>
+
+<p><strong>Undergraduate Researchers</strong></p>
 <ul>
   <li><a href="https://www.linkedin.com/in/madisonblock">Madison Block</a></li>
   <li><a href="https://www.linkedin.com/in/cody-dangerfield-850860a1">Cody Dangerfield</a></li>
-  <li><a href="https://nahlgren.wordpress.com/students/">Emily Dart</a></li>
+  <li><a href="https://www.linkedin.com/in/emily-dart-412501287/">Emily Dart</a></li>
   <li><a href="https://www.linkedin.com/in/sarahhludzinski">Sarah Hludzinski</a></li>
+  <li>Alli Hoffman</li>
   <li><a href="https://www.linkedin.com/in/alex-hyer">Alex Hyer</a></li>
-  <li><a href="https://twitter.com/microbio_babe">LeAundra Schopflin</a></li>
-  <li><a href="https://www.linkedin.com/in/shahrzad-motamedi/">Sheri Motamedi</a></li>
-  <li>Lizethe Pendleton</li>
+  <li><a href="https://www.linkedin.com/in/wjlowe/">Jake Lowe</a></li>
+  <li><a href="https://www.linkedin.com/in/briggs-miller-42a8a7247/">Briggs Miller</a></li>
+  <li><a href="https://twitter.com/lizethepen">Lizethe Pendleton</a></li>
   <li><a href="https://www.researchgate.net/profile/Mac-Pierce">Mac Pierce</a></li>
   <li>Abbey Rees</li>
-  <li><a href="https://www.researchgate.net/profile/Christopher-Thornton-4">Christopher Thornton</a></li>
-  <li><a href="https://twinglab.wixsite.com/website">Katrina Twing</a></li>
+  <li><a href="https://twitter.com/microbio_babe">LeAundra Schopflin</a></li>
   <li><a href="https://www.linkedin.com/in/mikayla-wheeler/">Mikayla Wheeler</a></li>
+</ul>
+
+<p><strong><a href="https://bmsis.org/ysp/">Blue Marble Space Young Scientists Program</a></strong></p>
+<ul>
+  <li><a href="https://www.linkedin.com/in/sydney-jones-589006258/">Sydney Jones</a></li>
+  <li>Nikki Lyons</li>
+  <li>Reza Shahjahan</li>
 </ul>
 
 <h2 id="website-overview">Website Overview</h2>
 <ul>
-  <li><a href="/lostcity">An overview of my research on the Lost City hydrothermal field is here.</a></li>
-  <li><a href="/atlantismassif">An overview of my research on the Atlantis Massif is here.</a></li>
-  <li><a href="/serpsprings">An overview of my research on serpentinite springs is here.</a></li>
-  <li><a href="/bsf">An overview of my research on the Bonneville Salt Flats is here.</a></li>
-  <li><a href="/ar">An overview of my research on antibiotic resistance is here.</a></li>
-  <li><a href="/projects">All data and code are open-source and publicly available as GitHub repositories summarized here.</a></li>
-  <li><a href="/papers">My publications are listed here.</a></li>
+  <li><a href="/lostcity">Lost City hydrothermal field</a></li>
+  <li><a href="/atlantismassif">Atlantis Massif</a></li>
+  <li><a href="/serpsprings">Continental serpentinite springs</a></li>
+  <li><a href="/bsf">Bonneville Salt Flats</a></li>
+  <li><a href="/ar">Antibiotic resistance</a></li>
+  <li><a href="/projects">Data and Code</a></li>
+  <li><a href="/papers">Publications</a></li>
 </ul>
 
 <h2 id="contact">Contact</h2>
 <ul>
-  <li>email: wbrazelton@gmail.com</li>
+  <li>email: william.brazelton@utah.edu, billy.brazelton@bmsis.org, wbrazelton@gmail.com</li>
   <li>twitter: <a href="https://twitter.com/wbrazelton">@wbrazelton</a></li>
 </ul>
 
