--- a/ar/index.html
+++ b/ar/index.html
@@ -88,6 +88,8 @@ The majority of clinically serious infections that are resistant to antibiotics 
 <p>We applied our metagenomic tools in a survey of antibiotic resistance genes present in natural watersheds of the midwestern USA. We found that resistance genes are more abundant in river waters immediately downstream from wastewater treatment facilities, but this spike in abundance quickly fades to background levels a few kilometers downstream.
 We also found that the resistance genes are more likely to be associated with mobile genetic elements immediately downstream from wastewater treatment facilities.</p>
 
+<p>Our current metagenomic analysis workflow is <a href="https://github.com/Brazelton-Lab/UTwastewaterARG">publicly available on GitHub here</a>.</p>
+
 <h2 id="publications-and-data">Publications and Data</h2>
 <p>Our first publication on this topic, <a href="/papers/Thornton-GigaScience/">by Christopher Thornton et al. (2020).</a></p>
 <ul>
