updated pubs and about page

--- a/about/index.html
+++ b/about/index.html
@@ -136,8 +136,7 @@
 
 <h2 id="contact">Contact</h2>
 <ul>
-  <li>email: william.brazelton@utah.edu, billy.brazelton@bmsis.org, wbrazelton@gmail.com</li>
-  <li>twitter: <a href="https://twitter.com/wbrazelton">@wbrazelton</a></li>
+  <li>email: william.brazelton@utah.edu, billy.brazelton@bmsis.org</li>
 </ul>
 
 <h2 id="credits">Credits</h2>
