--- a/atlantismassif/index.html
+++ b/atlantismassif/index.html
@@ -130,7 +130,7 @@ perspective.</p>
 <p>And <a href="/blog/dna-from-stone/">my blog post has more about the Brazelton Lab’s specific role in
 this project.</a></p>
 
-<h2 id="publications-and-data">Publications and Data</h2>
+<h2 id="publications-and-data-from-the-brazelton-lab">Publications and Data from the Brazelton Lab</h2>
 <ol>
   <li>
     <p>The first publication on the microbial diversity of subseafloor
