--- a/papers/Esser-Nat-Microbiol/index.html
+++ b/papers/Esser-Nat-Microbiol/index.html
@@ -119,7 +119,7 @@
 			<div class="pad-left note">
 				<div class="smallspacer"></div>
 				<i class="fa fa-paperclip fa-fw"></i>
-				<a class="off" href="/pdfs/supplements/Esser et al. - 2023 - A predicted CRISPR-mediated symbiosis between uncu.pdf">Esser et al. - 2023 - A predicted CRISPR-mediated symbiosis between uncu.pdf</a>
+				<a class="off" href="/pdfs/supplements/Esser et al. - 2023 - supplement.docx">Esser et al. - 2023 - supplement.docx</a>
 			</div>
 			<div class="bigspacer"></div>
 			
