fixed supplement links

--- a/papers/Boden-Geobiol/index.html
+++ b/papers/Boden-Geobiol/index.html
@@ -119,7 +119,7 @@
 			<div class="pad-left note">
 				<div class="smallspacer"></div>
 				<i class="fa fa-paperclip fa-fw"></i>
-				<a class="off" href="/pdfs/supplements/Boden_2025_supplement.zip">Boden_2025_supplement.zip</a>
+				<a class="off" href="/pdfs/supplements/Boden_2025_supplement.pdf">Boden_2025_supplement.pdf</a>
 			</div>
 			<div class="bigspacer"></div>
 			
