--- a/papers/Twing-Front-Microbiol/index.html
+++ b/papers/Twing-Front-Microbiol/index.html
@@ -119,7 +119,7 @@
 			<div class="pad-left note">
 				<div class="smallspacer"></div>
 				<i class="fa fa-paperclip fa-fw"></i>
-				<a class="off" href="/pdfs/supplements/Twing_2025_supplement.zip">Twing_2025_supplement.zip</a>
+				<a class="off" href="https://www.frontiersin.org/journals/microbiology/articles/10.3389/fmicb.2025.1504241/full#supplementary-material">full#supplementary-material</a>
 			</div>
 			<div class="bigspacer"></div>
 			
