--- a/papers/Lang-Geochim-Cosmochim-Acta/index.html
+++ b/papers/Lang-Geochim-Cosmochim-Acta/index.html
@@ -119,7 +119,7 @@
 			<div class="pad-left note">
 				<div class="smallspacer"></div>
 				<i class="fa fa-paperclip fa-fw"></i>
-				<a class="off" href="/pdfs/supplements/ScienceDirect_files_19Jan2026_10-51-05.050.zip">ScienceDirect_files_19Jan2026_10-51-05.050.zip</a>
+				<a class="off" href="https://www-sciencedirect-com.ezproxy.lib.utah.edu/science/article/pii/S0016703725005009#s0230">S0016703725005009#s0230</a>
 			</div>
 			<div class="bigspacer"></div>
 			
