updated BMSIS title on about page

--- a/about/index.html
+++ b/about/index.html
@@ -82,7 +82,7 @@
 
 <p>Research Associate Professor, <a href="https://www.biology.utah.edu/faculty/william-brazelton/">School of Biological Sciences, University of Utah</a></p>
 
-<p>Research Scientist, <a href="https://bmsis.org/">Blue Marble Space Institute of Science</a></p>
+<p>Research Investigator, <a href="https://bmsis.org/">Blue Marble Space Institute of Science</a></p>
 
 <h2 id="brazelton-lab-alumni">Brazelton Lab Alumni</h2>
 <p><strong>Postdoctoral Researchers</strong></p>
